--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -363,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this binary classification task, let's start with a baseline to compare future modeling approaches against. One reasonable baseline is a rule-based model that, by fitting on the training data, determines an optimal Z-axis threshold value $z^*\\ast*$ for classification. If $z \\le z^*$, we classify the point as driveable surface. If $z > z^*$, we classify the point as non-driveable. This baseline method should work better the flatter the driving surface is, but for non-flat driving scenarios, it should work very poorly."
+    "For this binary classification task, let's start with a baseline to compare future modeling approaches against. One reasonable baseline is a rule-based model that, by fitting on the training data, determines an optimal Z-axis threshold value $z^*$ for classification. If $z \\le z^*$, we classify the point as driveable surface. If $z > z^*$, we classify the point as non-driveable. This baseline method should work better the flatter the driving surface is, but for non-flat driving scenarios, it should work very poorly."
    ]
   },
   {
